--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -17,7 +17,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'blog/css/blog.css' %}" rel="stylesheet">
-    <link href="{% static 'blog/css/blog_custom.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/css/index.css' %}" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -34,7 +34,7 @@
         <p class="lead blog-description">Turning information into wisdom since 2016</p>
   </div>
 
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-default navbar-static-top navbar-full-custom">
 
     <!-- The navbar items need to be Gotham in ALL CAPS -->
     <!-- I also need to change the shading on the bottom and get rid of the color so that there is no outline to the navbar. -->
@@ -50,7 +50,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">SOCIAL</a></li>
+            <li><a href="#">SOCIAL</a></li>
             <li><a href="#about">POLITICS</a></li>
             <li><a href="#contact">SCIENCE/TECH</a></li>
             <li><a href="#contact">SPORTS</a></li>
