--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -34,21 +34,21 @@
         <p class="lead blog-description">Turning information into wisdom since 2016</p>
   </div>
 
-<nav class="navbar navbar-default navbar-static-top navbar-full-custom">
+<nav class="navbar navbar-default navbar-static-top">
 
     <!-- The navbar items need to be Gotham in ALL CAPS -->
     <!-- I also need to change the shading on the bottom and get rid of the color so that there is no outline to the navbar. -->
 
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed navbar-full-custom" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse collapse navbar-full-custom">
           <ul class="nav navbar-nav">
             <li><a href="#">SOCIAL</a></li>
             <li><a href="#about">POLITICS</a></li>
