--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -41,15 +41,15 @@
 
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed navbar-full-custom" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
         </div>
-        <div id="navbar" class="navbar-collapse collapse navbar-full-custom">
-          <ul class="nav navbar-nav">
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-full-custom">
             <li><a href="#">SOCIAL</a></li>
             <li><a href="#about">POLITICS</a></li>
             <li><a href="#contact">SCIENCE/TECH</a></li>
