--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -48,8 +48,8 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-full-custom">
+        <div id="navbar" class="navbar-collapse collapse navbar-full-custom">
+          <ul class="nav navbar-nav">
             <li><a href="#">SOCIAL</a></li>
             <li><a href="#about">POLITICS</a></li>
             <li><a href="#contact">SCIENCE/TECH</a></li>
