--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+  <img src="{% static 'blog/images/money_copy.jpg' %}"/>
 
           <div class="sidebar-module">
             <h4>Elsewhere</h4>
