--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -17,9 +17,10 @@ h1.blog-title {
 
 div.container {
     background-color: #FFFFFF;
-    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 nav {
-    margin: 0;
+    margin-bottom: 0;
 }
