--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,9 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-  <img src="{% static 'blog/images/money_copy.jpg' %}"/>
+  <div class="head-story">
+    <img src="{% static 'blog/images/money_copy.jpg' %}"/>
+  </div>
 
           <div class="sidebar-module">
             <h4>Elsewhere</h4>
