--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -33,3 +33,10 @@ div.head-story {
 div.head-story > img {
     width: 100%;
 }
+
+div.head-story > h2 {
+   position: absolute;
+   top: 200px;
+   left: 0;
+   width: 100%;
+}
