--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,8 @@
     </nav>
   <div class="head-story">
     <img src="{% static 'blog/images/money_copy.jpg' %}"/>
+      <h2>Article Title</h2>
+      <p>subtitle</p>
   </div>
 
           <div class="sidebar-module">
