--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -31,10 +31,18 @@ div.head-story {
 }
 
 div.head-story > img {
-    width: 100%;
+    width: 80%;
 }
 
 div.head-story > h2 {
+   position: absolute;
+   padding-top: 200px;
+   left: 0;
+   width: 100%;
+    text-align: center;
+}
+
+div.head-story > p {
    position: absolute;
    top: 200px;
    left: 0;
