--- a/templates/index.html
+++ b/templates/index.html
@@ -57,10 +57,30 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-  <div class="head-story">
-    <img src="{% static 'blog/images/money_copy.jpg' %}"/>
-      <h2>Article Title</h2>
-      <p>subtitle</p>
+  <div class="headliners">
+      <div class="head1">
+        <img class="head-img" src="{% static 'blog/images/money_copy.jpg' %}"/>
+          <h2 class="head-text">Article Title</h2>
+          <p class="head-text">subtitle</p>
+      </div>
+      <div class="head2">
+        <img class="head-img" src="{% static 'blog/images/money_copy.jpg' %}"/>
+          <h2 class="head-text">Article Title</h2>
+          <p class="head-text">subtitle</p>
+      </div>
+  </div>
+
+  <div class="secondary">
+      <div class="secondary1">
+        <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
+          <h2 class="second-text">Article Title</h2>
+          <p class="second-text">subtitle</p>
+      </div>
+      <div class="secondary2">
+        <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
+          <h2 class="second-text">Article Title</h2>
+          <p class="second-text">subtitle</p>
+      </div>
   </div>
 
           <div class="sidebar-module">
