--- a/templates/index.html
+++ b/templates/index.html
@@ -58,12 +58,12 @@
       </div>
     </nav>
   <div class="headliners">
-      <div class="head1">
+      <div class="head1 headliner">
         <img class="head-img" src="{% static 'blog/images/money_copy.jpg' %}"/>
           <h2 class="head-text">Article Title</h2>
           <p class="head-text">subtitle</p>
       </div>
-      <div class="head2">
+      <div class="head2 headliner">
         <img class="head-img" src="{% static 'blog/images/money_copy.jpg' %}"/>
           <h2 class="head-text">Article Title</h2>
           <p class="head-text">subtitle</p>
@@ -71,12 +71,12 @@
   </div>
 
   <div class="secondary">
-      <div class="secondary1">
+      <div class="secondary1 secondary">
         <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
           <h2 class="second-text">Article Title</h2>
           <p class="second-text">subtitle</p>
       </div>
-      <div class="secondary2">
+      <div class="secondary2 secondary">
         <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
           <h2 class="second-text">Article Title</h2>
           <p class="second-text">subtitle</p>
