--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -27,7 +27,7 @@ nav {
 }
 
 div.headliners {
-    width: 65%;
+    width: 70%;
     text-align: center;
     float: left;
 }
@@ -38,18 +38,20 @@ div.secondary {
     float: right;
 }
 
+div.headliner {
+    width: 100%;
+}
+
 img.head-img {
-    width: 30%;
+    width: 45%;
     float: left;
-    padding-left: 5%;
     padding-right: 5%;
 }
 
 .head-text {
-    width: 60%;
+    width: 45%;
     float: right;
     padding-left: 5%;
-    padding-right: 5%;
 }
 
 img.second {
