--- a/templates/index.html
+++ b/templates/index.html
@@ -71,12 +71,12 @@
   </div>
 
   <div class="secondary">
-      <div class="secondary1 secondary">
+      <div class="secondary1 second">
         <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
           <h2 class="second-text">Article Title</h2>
           <p class="second-text">subtitle</p>
       </div>
-      <div class="secondary2 secondary">
+      <div class="secondary2 second">
         <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
           <h2 class="second-text">Article Title</h2>
           <p class="second-text">subtitle</p>
