--- a/templates/index.html
+++ b/templates/index.html
@@ -1,103 +1,84 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-    <title>Blog Template for Bootstrap</title>
+<head>
+    <meta charset="UTF-8">
+    <title>The Creative Truth</title>
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![end if]-->
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'blog/css/bootstrap.min.css' %}" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'blog/css/blog.css' %}" rel="stylesheet">
-    <link href="{% static 'blog/css/index.css' %}" rel="stylesheet">
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-  <div class="blog-header">
-        <h1 class="blog-title">The Creative Truth</h1>
-  </div>
-
-<nav class="navbar navbar-default navbar-static-top">
-
-    <!-- The navbar items need to be Gotham in ALL CAPS -->
-    <!-- I also need to change the shading on the bottom and get rid of the color so that there is no outline to the navbar. -->
-
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse navbar-full-custom">
-          <ul class="nav navbar-nav">
-            <li><a href="#">SOCIAL</a></li>
-            <li><a href="#about">POLITICS</a></li>
-            <li><a href="#contact">SCIENCE/TECH</a></li>
-            <li><a href="#contact">SPORTS</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+</head>
+<body>
+<!-- Header, branding, and navigation(and search) -->
+<header class="container-fluid">
+    <h1>The Creative Truth</h1>
+    <search>This is the search function</search>
+    <nav>
+        <ul>
+            <li><a href="social.html" title="social">SOCIAL</a></li>
+            <li><a href="politics.html" title="politics">POLITICS</a></li>
+            <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
+            <li><a href="sports.html" title="sports">SPORTS</a></li>
+        </ul>
     </nav>
-  <div class="headliners">
-      <div class="head1 headliner">
-        <img class="head-img" src="{% static 'blog/images/money_copy.jpg' %}"/>
-          <h2 class="head-text">Article Title</h2>
-          <p class="head-text">subtitle</p>
-      </div>
-      <div class="head2 headliner">
-        <img class="head-img" src="{% static 'blog/images/money_copy.jpg' %}"/>
-          <h2 class="head-text">Article Title</h2>
-          <p class="head-text">subtitle</p>
-      </div>
-  </div>
-
-  <div class="secondary">
-      <div class="secondary1 second">
-        <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
-          <h2 class="second-text">Article Title</h2>
-          <p class="second-text">subtitle</p>
-      </div>
-      <div class="secondary2 second">
-        <img class="second" src="{% static 'blog/images/money_copy.jpg' %}"/>
-          <h2 class="second-text">Article Title</h2>
-          <p class="second-text">subtitle</p>
-      </div>
-  </div>
-
-          <div class="sidebar-module">
-            <h4>Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-            </ol>
-          </div>
-
-    <footer class="blog-footer">
-      <p>The Creative Truth</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
-
+</header>
+<!-- 3 most recent posts -->
+<main class="container">
+    <div class="row main-row">
+        <div class="col-sm-8">
+            <article class="col-sm-12">
+                <h2>Article 1</h2>
+                <section>
+                    <img/>
+                    <p>article description</p>
+                </section>
+            </article>
+            <article class="col-sm-12">
+                <h2>Article 2</h2>
+                <section>
+                    <img/>
+                    <p>article description</p>
+                </section>
+            </article>
+            <article class="col-sm-12">
+                <h2>Article 3</h2>
+                <section>
+                    <img/>
+                    <p>article description</p>
+                </section>
+            </article>
+        </div>
+    <!-- Our own ads for following us, sharing, and contributing -->
+        <div class="col-sm-4">
+            <section>
+                <article>
+                    <h3>Follow Us! ad</h3>
+                        <h4>We are on Twitter, and especially look us up on GitHub to see all of our code</h4>
+                        <p>
+                            <a href="https://github.com/carterfawson/TheCreativeTruth">GitHub</a>
+                            <a href="https://twitter.com/CarterFawson">Twitter</a>
+                        </p>
+                </article>
+                <article>
+                    <h3>Share us!</h3>
+                        <h4>tweet that you read our blog! Share our most recent article!</h4>
+                 </article>
+                <article>
+                    <h3>Give us suggestions</h3>
+                </article>
+                <article>
+                    <img href="aboutus-ad.jpg">
+                    <button><h3>About us</h3></button>
+                </article>
+            </section>
+        </div>
+    </div>
+</main>
+<!-- Links to our social media, about us, and contact pages -->
+<footer>
+    <h2>contact & social media</h2>
+</footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -105,5 +86,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
-  </body>
+</body>
 </html>
