working with Bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,25 +27,25 @@
 <main class="container">
     <div class="row main-row">
         <div class="col-sm-8">
-            <article class="col-sm-12">
+            <article class="row">
                 <h2>Article 1</h2>
                 <section>
                     <img/>
-                    <p>article description</p>
+                    <p class="lead">article description</p>
                 </section>
             </article>
-            <article class="col-sm-12">
+            <article class="row">
                 <h2>Article 2</h2>
                 <section>
                     <img/>
-                    <p>article description</p>
+                    <p class="lead">article description</p>
                 </section>
             </article>
-            <article class="col-sm-12">
+            <article class="row">
                 <h2>Article 3</h2>
                 <section>
                     <img/>
-                    <p>article description</p>
+                    <p class="lead">article description</p>
                 </section>
             </article>
         </div>
