working with Bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- This meta tag is needed to get the mobile version to show up for some reason, don't know why though -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>The Creative Truth</title>
@@ -29,25 +30,25 @@
     <div class="row main-row">
         <div class="col-sm-8">
             <article class="row">
-                <h2>Article 1</h2>
-                <section>
-                    <img/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6"/>
+                <div class="col-sm-6">
+                    <h2>Article 1</h2>
                     <p class="lead">article description</p>
-                </section>
+                </div>
             </article>
             <article class="row">
-                <h2>Article 2</h2>
-                <section>
-                    <img/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6"/>
+                <div class="col-sm-6">
+                    <h2>Article 2</h2>
                     <p class="lead">article description</p>
-                </section>
+                </div>
             </article>
             <article class="row">
-                <h2>Article 3</h2>
-                <section>
-                    <img/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6"/>
+                <div class="col-sm-6">
+                    <h2>Article 3</h2>
                     <p class="lead">article description</p>
-                </section>
+                </div>
             </article>
         </div>
     <!-- Our own ads for following us, sharing, and contributing -->
