--- a/templates/index.html
+++ b/templates/index.html
@@ -29,23 +29,23 @@
 <main class="container">
     <div class="row main-row">
         <div class="col-sm-8">
-            <article class="row">
+            <article class="row top-buffer">
                 <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8"/>
                 <div class="col-sm-4">
                     <h2>Article 1</h2>
                     <p class="lead">article description</p>
                 </div>
             </article>
-            <article class="row">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6"/>
-                <div class="col-sm-6">
+            <article class="row top-buffer">
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8"/>
+                <div class="col-sm-4">
                     <h2>Article 2</h2>
                     <p class="lead">article description</p>
                 </div>
             </article>
-            <article class="row">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6"/>
-                <div class="col-sm-6">
+            <article class="row top-buffer">
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8"/>
+                <div class="col-sm-4">
                     <h2>Article 3</h2>
                     <p class="lead">article description</p>
                 </div>
