working with Bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'blog/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/css/index.css' %}" rel="stylesheet">
 </head>
 <body>
 <!-- Header, branding, and navigation(and search) -->
