--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,13 @@
     <div class="row main-row">
         <div class="col-sm-9">
             <article class="row top-buffer">
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-12 img-headline"/>
+                <div class="col-sm-12">
+                    <h2>Headliner</h2>
+                    <p class="lead">article description</p>
+                </div>
+            </article>
+            <article class="row top-buffer">
                 <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-7"/>
                 <div class="col-sm-5">
                     <h2>Article 1</h2>
@@ -44,13 +51,7 @@
                     <p class="lead">article description</p>
                 </div>
             </article>
-            <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8"/>
-                <div class="col-sm-4">
-                    <h2>Article 3</h2>
-                    <p class="lead">article description</p>
-                </div>
-            </article>
+
         </div>
     <!-- Our own ads for following us, sharing, and contributing -->
         <div class="col-sm-3">
