--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <div class="row main-row">
         <div class="col-sm-9">
             <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-12 img-headline"/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8 col-sm-push-4 img-headline"/>
                 <div class="col-sm-12">
                     <h2>Headliner</h2>
                     <p class="lead">article description</p>
