working with Bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,24 +30,24 @@
 <main class="container">
     <div class="row main-row">
         <div class="col-sm-9">
-            <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8 col-sm-push-2 img-headline"/>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h2>Headliner</h2>
-                        <p class="lead">article description</p>
-                    </div>
+            <div class="row top-buffer">
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8 img-responsive img-headline"/>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Headliner</h2>
+                    <p class="lead">article description</p>
                 </div>
-            </article>
+            </div>
             <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-7"/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6 img-responsive"/>
                 <div class="col-sm-5">
                     <h2>Article 1</h2>
                     <p class="lead">article description</p>
                 </div>
             </article>
             <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6"/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6 img-responsive"/>
                 <div class="col-sm-6">
                     <h1>Article 2</h1>
                     <p class="lead">article description</p>
