--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <div class="row main-row">
         <div class="col-sm-9">
             <div class="row top-buffer">
-                <img src="{% static 'blog/images/placeholder.png' %}" class="col-sm-8 img-responsive img-headline"/>
+                <img src="{% static 'blog/images/placeholder.png' %}" class="col-sm-8 col-sm-push-2 img-responsive img-headline"/>
             </div>
             <div class="row">
                 <div class="col-sm-12">
