New square placeholder image

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
 <!-- 3 most recent posts -->
 <main class="container">
     <div class="row main-row">
-        <div class="col-sm-9">
+        <div class="col-sm-8">
             <div class="row top-buffer">
-                <img src="{% static 'blog/images/placeholder.png' %}" class="col-sm-8 col-sm-push-2 img-responsive img-headline"/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-8 img-responsive img-headline"/>
             </div>
             <div class="row">
                 <div class="col-sm-12">
@@ -56,7 +56,7 @@
 
         </div>
     <!-- Our own ads for following us, sharing, and contributing -->
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             <section>
                 <article>
                     <h3>Follow Us! ad</h3>
