--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <body>
 <!-- Header, branding, and navigation(and search) -->
 <header class="container-fluid">
-    <h1>The Creative Truth</h1>
+    <h1 class="imghead">The Creative Truth</h1>
     <search>This is the search function</search>
     <nav>
         <ul>
@@ -40,14 +40,14 @@
                 </div>
             </div>
             <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6 img-responsive"/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6 img-responsive img-rounded"/>
                 <div class="col-sm-5">
                     <h2>Article 1</h2>
                     <p class="lead">article description</p>
                 </div>
             </article>
             <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6 img-responsive"/>
+                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6 img-responsive img-rounded"/>
                 <div class="col-sm-6">
                     <h1>Article 2</h1>
                     <p class="lead">article description</p>
