--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -3,7 +3,7 @@
 .img-headline {margin: 0 auto}
 
 .imghead {
-    background-image: url('../../TheCreativeTruth/static/blog/images/header.jpeg');
+    background-image: url('/static/blog/images/header.jpeg');
     background-position: center;
     background-size: cover;
     height: 200px;
