--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- Header, branding, and navigation(and search) -->
-<header class="container-fluid">
+<header>
     <h1 class="imghead">The Creative Truth</h1>
     <search>This is the search function</search>
     <nav>
