--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <body>
 <!-- Header, branding, and navigation(and search) -->
 <header>
-    <h1 class="imghead">The Creative Truth</h1>
+    <h1 class="imghead text-hide">The Creative Truth</h1>
     <search>This is the search function</search>
     <nav>
         <ul>
