--- a/templates/index.html
+++ b/templates/index.html
@@ -16,15 +16,15 @@
 <!-- Header, branding, and navigation(and search) -->
 <header>
     <h1 class="imghead text-hide">The Creative Truth</h1>
-    <search>This is the search function</search>
     <nav>
-        <ul>
+        <ul class="nav nav-justified">
             <li><a href="social.html" title="social">SOCIAL</a></li>
             <li><a href="politics.html" title="politics">POLITICS</a></li>
             <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
             <li><a href="sports.html" title="sports">SPORTS</a></li>
         </ul>
     </nav>
+    <p>Make sure to add a searchbar somewhere!</p>
 </header>
 <!-- 3 most recent posts -->
 <main class="container">
