--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'blog/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'blog/css/index.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/css/navbar_justified.css' %}" rel="stylesheet">
 </head>
 <body>
 <!-- Header, branding, and navigation(and search) -->
