--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,15 @@
 <!-- Header, branding, and navigation(and search) -->
 <header>
     <h1 class="imghead text-hide">The Creative Truth</h1>
-    <nav>
-        <ul class="nav nav-justified">
-            <li><a href="social.html" title="social">SOCIAL</a></li>
-            <li><a href="politics.html" title="politics">POLITICS</a></li>
-            <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
-            <li><a href="sports.html" title="sports">SPORTS</a></li>
-        </ul>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <ul class="nav nav-justified">
+                <li><a href="social.html" title="social">SOCIAL</a></li>
+                <li><a href="politics.html" title="politics">POLITICS</a></li>
+                <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
+                <li><a href="sports.html" title="sports">SPORTS</a></li>
+            </ul>
+        </div>
     </nav>
     <p>Make sure to add a searchbar somewhere!</p>
 </header>
