--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <h1 class="imghead text-hide">The Creative Truth</h1>
     <nav class="navbar navbar-default">
         <div class="container">
-            <ul class="nav nav-justified">
+            <ul class="nav nav-justified nav-home">
                 <li><a href="social.html" title="social">SOCIAL</a></li>
                 <li><a href="politics.html" title="politics">POLITICS</a></li>
                 <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
