--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 <header>
     <h1 class="imghead text-hide">The Creative Truth</h1>
     <nav class="navbar navbar-default navbar-home">
-        <div class="navbar-container">
+        <div class="navbar-container container">
             <ul class="nav nav-justified">
                 <li><a href="social.html" title="social">SOCIAL</a></li>
                 <li><a href="politics.html" title="politics">POLITICS</a></li>
