--- a/templates/index.html
+++ b/templates/index.html
@@ -17,15 +17,15 @@
 <!-- Header, branding, and navigation(and search) -->
 <header>
     <h1 class="imghead text-hide">The Creative Truth</h1>
-    <nav class="navbar navbar-default navbar-home">
-        <div class="navbar-container container">
-            <ul class="nav nav-justified">
+    <nav class="navbar navbar-default">
+       <!-- <div class="navbar-container container">-->
+            <ul class="nav">
                 <li><a href="social.html" title="social">SOCIAL</a></li>
                 <li><a href="politics.html" title="politics">POLITICS</a></li>
                 <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
                 <li><a href="sports.html" title="sports">SPORTS</a></li>
             </ul>
-        </div>
+        <!--</div>-->
     </nav>
     <p>Make sure to add a searchbar somewhere!</p>
 </header>
