--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -11,11 +11,6 @@
     margin-top: 0;
 }
 
-.navbar-home {
-    margin-bottom: 0;
-}
-
-.navbar-container {
-    height: 100%;
-    width: 70%;
+.navbar-custom {
+    background-color: inherit;
 }
