--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
 <!-- Header, branding, and navigation(and search) -->
 <header>
     <h1 class="imghead text-hide">The Creative Truth</h1>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-custom">
        <div class="container">
-            <ul class="nav navbar-nav navbar-custom">
+            <ul class="nav navbar-nav">
                 <li><a href="social.html" title="social">SOCIAL</a></li>
                 <li><a href="politics.html" title="politics">POLITICS</a></li>
                 <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
