--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -15,3 +15,11 @@
     background-color: #ffffff;
     border: none;
 }
+
+.custom-nav-list {
+
+}
+
+.custom-nav-container {
+    text-align: center;
+}
