--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
 <header>
     <h1 class="imghead text-hide">The Creative Truth</h1>
     <nav class="navbar navbar-default navbar-custom">
-       <div class="container">
-            <ul class="nav navbar-nav">
+       <div class="container custom-nav-container">
+            <ul class="nav navbar-nav custom-nav-list inline">
                 <li><a href="social.html" title="social">SOCIAL</a></li>
                 <li><a href="politics.html" title="politics">POLITICS</a></li>
                 <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
