--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'blog/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'blog/css/index.css' %}" rel="stylesheet">
-    <!--<link href="{% static 'blog/css/navbar_justified.css' %}" rel="stylesheet">-->
+    <link href="{% static 'blog/css/navbar_justified.css' %}" rel="stylesheet">
 </head>
 <body>
 <!-- Header, branding, and navigation(and search) -->
@@ -19,7 +19,7 @@
     <h1 class="imghead text-hide">The Creative Truth</h1>
     <nav class="navbar navbar-default navbar-custom">
        <div class="container custom-nav-container">
-            <ul class="nav navbar-nav custom-nav-list">
+            <ul class="nav navbar-nav custom-nav-list nav-justified">
                 <li><a href="social.html" title="social">SOCIAL</a></li>
                 <li><a href="politics.html" title="politics">POLITICS</a></li>
                 <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
