--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
 <!-- Header, branding, and navigation(and search) -->
 <header>
     <h1 class="imghead text-hide">The Creative Truth</h1>
-    <nav class="navbar navbar-default navbar-custom">
-       <div class="container custom-nav-container">
+    <nav class="navbar">
+       <div class="container">
             <ul class="nav navbar-nav custom-nav-list nav-justified">
                 <li><a href="social.html" title="social">SOCIAL</a></li>
                 <li><a href="politics.html" title="politics">POLITICS</a></li>
