--- a/templates/index.html
+++ b/templates/index.html
@@ -16,27 +16,36 @@
 <body>
 <!-- Header, branding, and navigation(and search) -->
 <header>
-    <h1 class="imghead text-hide">The Creative Truth</h1>
-    <nav id="header" class="navbar navbar-fixed-top">
-            <div id="header-container" class="container navbar-container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+    <h1 class="imghead">The Creative Truth</h1>
+    <!--<nav>
+       <div class="container">
+            <ul class="nav">
+                <li><a href="social.html" title="social">SOCIAL</a></li>
+                <li><a href="politics.html" title="politics">POLITICS</a></li>
+                <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
+                <li><a href="sports.html" title="sports">SPORTS</a></li>
+            </ul>
+        </div>
+    </nav>-->
+    <nav>
+        <div class="container small-cont">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h4>SOCIAL</h4>
                 </div>
-                <div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="social.html" title="social">SOCIAL</a></li>
-                        <li><a href="politics.html" title="politics">POLITICS</a></li>
-                        <li><a href="science-tech.html" title="science-tech">SCIENCE/TECH</a></li>
-                        <li><a href="sports.html" title="sports">SPORTS</a></li>
-                    </ul>
-                </div><!-- /.nav-collapse -->
-            </div><!-- /.container -->
-        </nav><!-- /.navbar -->
+                <div class="col-sm-3">
+                    <h4>POLITICS</h4>
+                </div>
+                <div class="col-sm-3">
+                    <h4>SCIENCE</h4>
+                </div>
+                <div class="col-sm-3">
+                    <h4>SPORTS</h4>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <p>Make sure to add a searchbar somewhere!</p>
 </header>
 <!-- 3 most recent posts -->
 <main class="container">
