--- a/templates/index.html
+++ b/templates/index.html
@@ -31,20 +31,21 @@
         <div class="container small-cont">
             <div class="row">
                 <div class="col-sm-3">
-                    <h4>SOCIAL</h4>
+                    <h4><a href="social.html" title="social">SOCIAL</a></h4>
                 </div>
                 <div class="col-sm-3">
-                    <h4>POLITICS</h4>
+                    <h4><a href="politics.html" title="politics">POLITICS</a></h4>
                 </div>
                 <div class="col-sm-3">
-                    <h4>SCIENCE</h4>
+                    <h4><a href="science-tech.html" title="science-tech">SCIENCE</a></h4>
                 </div>
                 <div class="col-sm-3">
-                    <h4>SPORTS</h4>
+                    <h4><a href="sports.html" title="sports">SPORTS</a></h4>
                 </div>
             </div>
         </div>
     </nav>
+    <hr>
     <p>Make sure to add a searchbar somewhere!</p>
 </header>
 <!-- 3 most recent posts -->
