--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </nav>
-    <hr>
+    <hr class="nav-rule">
     <p>Make sure to add a searchbar somewhere!</p>
 </header>
 <!-- 3 most recent posts -->
