--- a/templates/index.html
+++ b/templates/index.html
@@ -30,16 +30,16 @@
     <nav>
         <div class="container small-cont">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-3 text-center">
                     <h4><a href="social.html" title="social">SOCIAL</a></h4>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 text-center">
                     <h4><a href="politics.html" title="politics">POLITICS</a></h4>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 text-center">
                     <h4><a href="science-tech.html" title="science-tech">SCIENCE</a></h4>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 text-center">
                     <h4><a href="sports.html" title="sports">SPORTS</a></h4>
                 </div>
             </div>
