--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,9 @@
 <body>
 <!-- Header, branding, and navigation(and search) -->
 <header>
-    <h1 class="imghead">The Creative Truth</h1>
+    <div class="imghead">
+        <h1>The Creative Truth</h1>
+    </div>
     <!--<nav>
        <div class="container">
             <ul class="nav">
