--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -6,10 +6,9 @@
     /**background-image: url('/static/blog/images/header.jpeg');
     background-position: center bottom;
     background-size: cover; **/
-    height: 175px;
-    background-color: #00b0ff;
+    height: 150px;
+    color: #00b0ff;
     text-align: center;
-    vertical-align: middle;
 }
 
 .imghead > h1 {
