--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -7,12 +7,12 @@
     background-position: center bottom;
     background-size: cover; **/
     height: 150px;
-    color: #00b0ff;
+    color: #010101;
     text-align: center;
 }
 
 header {
-    background-color: #d0d0d0;
+    background-color: #eeeeee;
 }
 
 
