--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -9,6 +9,8 @@
     height: 150px;
     color: #010101;
     text-align: center;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 header {
@@ -18,6 +20,7 @@ header {
 
 .imghead > h1 {
     font-size: 100px;
+    margin-top: 0px;
 }
 
 .navbar-custom {
