--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -15,6 +15,10 @@ header {
     background-color: #eeeeee;
 }
 
+nav {
+    background-color: #fafafa;
+}
+
 
 .imghead > h1 {
     font-size: 100px;
