--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <h2>Headliner</h2>
-                    <p class="lead">article description</p>
+                    <h2 class="text-capitalize">Turning Information Into Wisdom</h2>
+                    <p class="lead">The mission of The Creative Truth is to help people navigate the highly polarized news landscape that we interact with everyday. This article explains how we do it.</p>
                 </div>
             </div>
             <article class="row top-buffer">
