--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <h2 class="text-capitalize">Turning Information Into Wisdom</h2>
-                    <p class="lead">The mission of The Creative Truth is to help people navigate the highly polarized news landscape that we interact with everyday. This article explains how we do it.</p>
+                    <p class="lead">How The Creative Truth will help to navigate the polarized ways that we form our opinions.</p>
                 </div>
             </div>
             <article class="row top-buffer">
