--- a/templates/index.html
+++ b/templates/index.html
@@ -48,11 +48,11 @@
             <div class="row">
                 <div class="col-sm-12">
                     <h2 class="text-capitalize">Turning Information Into Wisdom</h2>
-                    <p class="lead">How The Creative Truth will help to navigate the polarized ways that we form our opinions.</p>
+                    <p class="lead">How The Creative Truth will help us navigate the polarized ways that we form our opinions.</p>
                 </div>
             </div>
             <article class="row top-buffer">
-                <img src="{% static 'blog/images/money_copy.jpg' %}" class="col-sm-6 img-responsive img-rounded"/>
+                <img src="{% static 'blog/images/mythconceptions.png' %}" class="col-sm-6 img-responsive img-rounded"/>
                 <div class="col-sm-5">
                     <h2>Article 1</h2>
                     <p class="lead">article description</p>
