--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     <div class="row main-row">
         <div class="col-sm-8">
             <div class="row top-buffer">
-                <img src="{% static 'blog/images/tester.jpg' %}" class="col-sm-11 center-block img-responsive img-headline"/>
+                <img src="{% static 'blog/images/tester2.jpg' %}" class="col-sm-11 center-block img-responsive img-headline"/>
             </div>
             <div class="row">
                 <div class="col-sm-12">
