--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,13 @@
     <!-- Our own ads for following us, sharing, and contributing -->
         <div class="col-sm-4">
             <section>
+                    <div class="input-group">
+                      <input type="text" class="form-control" placeholder="Search for...">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Go!</button>
+                      </span>
+                    </div><!-- /input-group -->
+
                 <article>
                     <h3>Follow Us! ad</h3>
                         <h4>We are on Twitter, and especially look us up on GitHub to see all of our code</h4>
