--- a/templates/index.html
+++ b/templates/index.html
@@ -71,12 +71,12 @@
         <div class="col-sm-4">
             <section>
                     <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search for...">
+                      <input type="text" class="form-control" placeholder="Search our posts...">
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Go!</button>
                       </span>
                     </div><!-- /input-group -->
-
+                <hr>
                 <article>
                     <h3>Follow Us! ad</h3>
                         <h4>We are on Twitter, and especially look us up on GitHub to see all of our code</h4>
@@ -85,10 +85,12 @@
                             <a href="https://twitter.com/CarterFawson">Twitter</a>
                         </p>
                 </article>
+                <hr>
                 <article>
                     <h3>Share us!</h3>
                         <h4>tweet that you read our blog! Share our most recent article!</h4>
                  </article>
+                <hr>
                 <article>
                     <h3>Give us suggestions</h3>
                 </article>
