--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,8 @@
 </main>
 <!-- Links to our social media, about us, and contact pages -->
 <footer>
-    <h2>contact & social media</h2>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; TheCreativeTruth.net &middot; <a href="#">Contact Us</a> &middot; <a href="#">About Us</a></p>
 </footer>
 
     <!-- Bootstrap core JavaScript
