--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
     </div>
 </main>
 <!-- Links to our social media, about us, and contact pages -->
-<footer>
+<footer class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; TheCreativeTruth.net &middot; <a href="#">Contact Us</a> &middot; <a href="#">About Us</a></p>
 </footer>
