--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,12 @@
                 <div class="col-sm-3 text-center">
                     <h4><a href="sports.html" title="sports">SPORTS</a></h4>
                 </div>
+                <div class="input-group hide-search col-sm-3">
+                      <input type="text" class="form-control" placeholder="Search our posts...">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Go!</button>
+                      </span>
+                </div>
             </div>
         </div>
     </nav>
@@ -115,5 +121,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'blog/js/index.js' %}"></script>
 </body>
 </html>
