--- a/templates/index.html
+++ b/templates/index.html
@@ -34,12 +34,15 @@
                 <div class="col-sm-3 text-center">
                     <h4><a href="sports.html" title="sports">SPORTS</a></h4>
                 </div>
-                <div class="input-group hide-search col-sm-3">
+                <div class="hide-search">
+                    <div class="input-group">
                       <input type="text" class="form-control" placeholder="Search our posts...">
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Go!</button>
                       </span>
+                    </div>
                 </div>
+
             </div>
         </div>
     </nav>
